# peach-config-rust

./: Cargo.toml  README.md  install.sh
conf/: 50-gpio.rules  README.md  activate-rtc.service  activate_rtc.sh  ap_auto_deploy.sh  config.txt  config.txt_ds1307  config.txt_ds3231  config.txt_i2c  hosts  modules  modules_rtc  mygpio.dtbo  peach.conf  peach.list  reduce-timeout.conf  shutdown
conf/backup/: 00-accesspoint.rules  README  dhcpd.conf  dnsmasq.conf  hostapd  hostapd.conf  interfaces  network  wpa_supplicant.conf
conf/network/: 04-wired.network  12-ap0.network  ap-auto-deploy.service  ap-auto-deploy.timer  copy-wlan.service  copy-wlan.sh  wpa_supplicant-ap0.conf  wpa_supplicant-wlan0.conf
docs/: direct_ethernet_setup.md  installation-from-debian-disc-image.md  installation-from-peach-disc-image.md  networkd_dual_iface_setup  networkd_single_iface_setup
scripts/: setup_networking.sh  setup_peach.sh
src/: constants.rs  error.rs  generate_manifest.rs  main.rs  setup_networking.rs  setup_peach.rs  setup_peach_deb.rs  update.rs  utils.rs
