[package]
name = "peach-config"
version = "0.1.8"
authors = ["Andrew Reid <gnomad@cryptolab.net>", "Max Fowler <max@mfowler.info>"]
edition = "2018"
description = "Command line tool for installing, updating and configuring PeachCloud"
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-config"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-config is a command line tool for installing, updating and configuring PeachCloud"""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-config", "usr/bin/", "755"],
    ["conf/**/*", "/var/lib/peachcloud/conf/", "644"],
    ["README.md", "usr/share/doc/peach-config/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-config", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
snafu = "0.6"
regex = "1"
structopt = "0.3.13"
clap = "2.33.3"
log = "0.4"
lazy_static = "1.4.0"
